# autotuning_methodology

./: .coveragerc  .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  baseline.py  caching.py  curves.py  experiments.py  interpolation.py  noxfile.py  pyproject.toml  runner.py  searchspace_statistics.py  setup.py  visualize_experiments.py
.github/workflows/: build-test-python-package.yml  publish-documentation.yml  publish-package.yml  python-package.yml
UML/: .$Sequence Diagram.drawio.bkp  .$flowchart.drawio.bkp  Sequence Diagram.drawio
UML/flowchart/: .$flowchart.drawio.bkp  .$flowchart.drawio.dtmp  flowchart.drawio
UML/flowchart/mini_plots/: flowchart_plots.py
autotuning_methodology/: baseline.py  caching.py  curves.py  experiments.py  runner.py  searchspace_statistics.py  visualize_experiments.py
autotuning_methodology/test/: test_curves.py
cached_data_used/cachefiles/: extend_kerneltuner_cachefile.py  kerneltuner_to_T4.py  ktt_values_to_kerneltuner.py
cached_data_used/hyperparametertuning_metastrategies/: metatuning_diff_evo.json  metatuning_dual_annealing.json  metatuning_genetic_algorithm.json  metatuning_pso.json  metatuning_simulated_annealing.json
docs/: autotuning_methodology.rst  conf.py  contributing.rst  getting_started.rst  index.rst  modules.rst  rsd_description.md
experiment_files/: compare_bo.json  compare_hypertuners.json  compare_hypertuners_metastrategy.json  compare_hypertuners_milo.json  compare_hypertuners_paper.json  compare_hypertuners_paper_heatmaps_left.json  compare_hypertuners_paper_heatmaps_right.json  compare_hypertuners_paper_test.json  compare_meta_algorithms.json  convert_old_to_new_format.py  example_visualizations.json  ktt_coulomb_two_autotuner_versions.json  ktt_coulomb_two_search_methods.json  ktt_vectorAddition_two_search_methods.json  methodology_paper_evaluation.json  methodology_paper_evaluation_2.json  methodology_paper_evaluation_new.json  methodology_paper_example.json  milo_hotspot.json  presentation_comparison.json  schema.json  simple_example.json  test_methodology.json  test_methodology_quick.json  test_methodology_quicker.json  test_output_file_writer.json  test_random_calculated.json  test_scatter.json
experiments/: test_methodology_quick.json  test_methodology_random.json
extra/: bootstrap_hyperparams_visualizer.py  experiments_strategies.py  experiments_strategies_hyperparamtuning.py  generate_cachefile.py  max_draw_k_from_n.py  speedtest_index_performance.py  speedtest_python_reversed_nan_sort.py  test_isotonic_regression.py  try_BOtorch.py  try_GPytorch.py  try_isotonic_regression.py
methodology_paper_evaluation/setup/: RTX_3090_convolution_dual_annealing_input.json  RTX_3090_convolution_genetic_algorithm_input.json  RTX_3090_convolution_greedy_ils_input.json
src/autotuning_methodology/: __init__.py  baseline.py  caching.py  curves.py  experiments.py  experiments_defaults.json  formats_interface.py  report_experiments.py  runner.py  schema.json  searchspace_statistics.py  validators.py  visualize_experiments.py
src/autotuning_methodology/schemas/: T4.json  experiments.json
test/: caching.py
tests/autotuning_methodology/integration/: test_report.py  test_run_experiment.py  test_visualization.py
tests/autotuning_methodology/integration/mockfiles/: mock_gpu.json  mocktest_kernel_convolution.json  mocktest_kernel_convolution.py  test.json  test_bad_kernel_path.json  test_cached.json  test_import_runs.json
tests/autotuning_methodology/integration/mockfiles/import_runs/: t~'ktt'd~'mock_gpu'k~'mocktest_kernel_convolution's~'profile_searcher'r~0.json  t~'ktt'k~'mocktest_kernel_convolution's~'profile_searcher'r~1.json
tests/autotuning_methodology/release/: test_toml_file.py
tests/autotuning_methodology/unit/: test_caching.py  test_curves.py
